--- a/audit-logs/charts/templates/audit-logs-collector.yaml
+++ b/audit-logs/charts/templates/audit-logs-collector.yaml
@@ -15,6 +15,16 @@ metadata:
   {{- end }}
 spec:
   mode: daemonset
+  hostPID: true
+  securityContext:
+    privileged: true
+    runAsUser: 0
+    capabilities:
+      add:
+        # Capabilities needed for auditd
+        - 'AUDIT_READ'
+        - 'AUDIT_WRITE'
+        - 'AUDIT_CONTROL'
   tolerations:
   - operator: Exists
   env:
@@ -45,6 +55,10 @@ spec:
     - name: prometheus
       port: 8888
 {{- end }}
+
+  initContainers:
+{{- include "auditd.initContainer" . | nindent 2 -}}
+
   image: {{ .Values.auditLogs.collectorImage.repository }}:{{ .Values.auditLogs.collectorImage.tag }}
   volumeMounts:
   - mountPath: /var/log
@@ -83,11 +97,15 @@ spec:
             field: attributes["log.type"]
             value: "containerd"
 
+{{- include "auditd.receiver" . | nindent 6 -}}
+
     processors:
       batch:
         send_batch_max_size: 500
         timeout: 5s
         send_batch_size : 10
+
+{{- include "auditd.processors" . | nindent 6 -}}
 
       attributes/cluster:
         actions:
@@ -334,6 +352,7 @@ spec:
 {{- if .Values.auditLogs.openSearchLogs.failover.enabled }}
     {{- include "failover.pipeline" . | nindent 8 -}}
 {{- end }}
+{{- include "auditd.pipelines" . | nindent 8 -}}
         logs/containerd:
           receivers: [filelog/containerd]
           processors: [k8sattributes,attributes/cluster,transform/ingress,batch]
