--- a/kube-monitoring/charts/values.yaml
+++ b/kube-monitoring/charts/values.yaml
@@ -567,3 +567,9 @@ networkPolicies:
   #       ports:
   #       - protocol: TCP
   #         port: 9090
+
+additionalScrapeConfigs:
+  namespaceLookup:
+    enabled: false
+    regex: "your-regex"
+    prometheusName: prometheus
