ignore new values

--- a/kube-monitoring/charts/values.yaml
+++ b/kube-monitoring/charts/values.yaml
@@ -568,6 +568,7 @@ networkPolicies:
   #       - protocol: TCP
   #         port: 9090
 
+# @ignored
 additionalScrapeConfigs:
   namespaceLookup:
     enabled: false
