allow extra manifests

--- a/alerts/charts/values.yaml
+++ b/alerts/charts/values.yaml
@@ -288,6 +288,8 @@ alerts:
         #      - name: alertname
         #        matchType: "=~"
 
+extraManifests: []
+
 testFramework:
   enabled: true
   image:
