--- a/kube-monitoring/charts/templates/additionalScrapeConfigs.yaml
+++ b/kube-monitoring/charts/templates/additionalScrapeConfigs.yaml
@@ -2,14 +2,17 @@
 {{- $namespaces := lookup "v1" "Namespace" "" "" }}
 {{- $regex := .Values.additionalScrapeConfigs.namespaceLookup.regex }}
 {{- $prometheusName := .Values.additionalScrapeConfigs.namespaceLookup.prometheusName }}
+{{- $prometheusPort := .Values.additionalScrapeConfigs.namespaceLookup.prometheusPort | toString }}
 {{- if $namespaces }}
 {{- $targets := list }}
 {{- range $namespaces.items }}
 {{- if regexMatch $regex .metadata.name }}
-{{- $targets = append $targets (printf "%s.%s.svc:80" $prometheusName .metadata.name) }}
+{{- $targets = append $targets (printf "%s.%s.svc:%s" $prometheusName .metadata.name $prometheusPort) }}
 {{- end }}
 {{- end }}
 {{- if $targets }}
+{{- $metricRelabelConfigs := .Values.additionalScrapeConfigs.namespaceLookup.metricRelabelConfigs }}
+{{- $params := .Values.additionalScrapeConfigs.namespaceLookup.params }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -19,7 +22,7 @@ metadata:
     app: {{ template "kube-prometheus-stack.name" $ }}-prometheus-scrape-confg
 {{ include "kube-prometheus-stack.labels" $ | indent 4 }}
 data:
-  additional-scrape-configs.yaml: {{ include "kubeMonitoring.additionalScrapeConfigsYaml" (list $targets) | b64enc | quote }}
+  additional-scrape-configs.yaml: {{ include "kubeMonitoring.additionalScrapeConfigsYaml" (dict "targets" $targets "metricRelabelConfigs" $metricRelabelConfigs "params" $params) | b64enc | quote }}
 {{- end }}
 {{- end }}
 {{- end }}
