--- a/kube-monitoring/charts/values.yaml
+++ b/kube-monitoring/charts/values.yaml
@@ -574,3 +574,6 @@ additionalScrapeConfigs:
     enabled: false
     regex: "your-regex"
     prometheusName: prometheus
+    prometheusPort: 80
+    metricRelabelConfigs: []
+    params: []
