feat(kafka): initial helm chart (#1259)
* feat: initial commit helm chart

* exclude licence header

* add tests

* update Readme

* add simple playbooks

* update Readme

* refactor: remove alerts, tests, and playbooks for separate PR

* add kafka topics for audit and logs

* remove system file

* update readme

* update comments to use @default

* update strimzi-kafka-operator to 0.49.1

* update readme

* fix labels for smon

* fix: remove non existing optional components

* remove name override in test-values and enable monitoring

* remove unused kafka.cluster-name in helpers

* update api versions after upgrade

* add _rate to metric to avoid conflict

* switch to pod monitor

* shorten namen and add comments for heap settings

* update readme

* chore(kafka): add paths to .github

* fix(kafka): add check for prom crds

* add test-dependencies.yaml for CI

* remove non existing optional components

---------

Co-authored-by: Timo <32620814+timojohlo@users.noreply.github.com>
Co-authored-by: I504010 <me@timojohner.de>

--- a/.github/licenserc.yaml
+++ b/.github/licenserc.yaml
@@ -27,6 +27,7 @@ header:
     - 'kube-monitoring/**' # ignore the license for the kube-monitoring charts
     - 'thanos/**' # ignore the license for this directory
     - 'opensearch/**' # ignore the license for the opensearch charts
+    - 'kafka/**' # ignore the license for the kafka charts
     - 'logs/**' # ignore the license for the opentelemetry charts
     - '**/*.md'
     - 'LICENSE'
