--- a/alerts/charts/templates/am-notification-template-configmap.yaml
+++ b/alerts/charts/templates/am-notification-template-configmap.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.alerts.alertmanager.enabled }}
+{{- if and .Values.alerts.alertmanager.enabled .Values.defaultNotificationTemplates }}
 apiVersion: v1
 kind: ConfigMap
 
