--- a/kafka/chart/templates/secret.yaml
+++ b/kafka/chart/templates/secret.yaml
@@ -5,5 +5,5 @@ metadata:
   labels:
   {{- include "plugin.labels" . | nindent 4 }}
 data:
-   failover_username_a: {{ .Values.openTelemetry.openSearchLogs.failover_username_a | b64enc | quote }}
-   failover_password_a: {{ .Values.openTelemetry.openSearchLogs.failover_password_a | b64enc | quote }}
+   failover_username_a: {{ .Values.gatewayLogs.openSearchLogs.failover_username_a | b64enc | quote }}
+   failover_password_a: {{ .Values.gatewayLogs.openSearchLogs.failover_password_a | b64enc | quote }}
