--- a/kafka/test-dependencies.yaml
+++ b/kafka/test-dependencies.yaml
@@ -4,3 +4,52 @@
 dependencies:
   - kube-monitoring
   - logs
+
+values:
+  opentelemetry-operator:
+    crds:
+      create: false
+    admissionWebhooks:
+      create: true
+      failurePolicy: 'Ignore'
+      certManager:
+        enabled: false
+      autoGenerateCert:
+        enabled: true
+        recreate: false
+    manager:
+      collectorImage:
+        repository: ghcr.io/cloudoperators/opentelemetry-collector-contrib
+        tag: main
+      image:
+        repository: ghcr.io/open-telemetry/opentelemetry-operator/opentelemetry-operator
+        tag: v0.114.1
+      prometheusRule:
+        enabled: false
+        defaultRules:
+          enabled: false
+      serviceMonitor:
+        enabled: false
+    kubeRBACProxy:
+      enabled: false
+
+  openTelemetry:
+    openSearchLogs:
+      endpoint: test
+      failover_username_a: test
+      failover_password_a: test
+      failover_username_b: test
+      failover_password_b: test
+      index: test
+    cluster: test
+    region: test
+    logsCollector:
+      enabled: true
+      failover:
+        enabled: false
+    metricsCollector:
+      enabled: false
+    prometheus:
+      additionalLabels:
+        key1: value1
+        key2: value2
