fix(audit-logs): fixes mounting issues
---------

Signed-off-by: Simon Olander <simon.olander@sap.com>

--- a/audit-logs/charts/templates/audit-logs-collector.yaml
+++ b/audit-logs/charts/templates/audit-logs-collector.yaml
@@ -66,12 +66,15 @@ spec:
   - mountPath: /var/log
     name: varlog
     readOnly: true
+{{- if .Values.auditLogs.logsCollector.auditd.enabled }}
+  {{- include "auditd.volumeMounts" . | nindent 2 -}}
+{{ end }}
   volumes:
   - name: varlog
     hostPath:
       path: /var/log
 {{- if .Values.auditLogs.logsCollector.auditd.enabled }}
-  {{- include "auditd.initContainerVolumes" . | nindent 2 -}}
+  {{- include "auditd.volumes" . | nindent 2 -}}
 {{ end }}
   config:
     receivers:
