enable operator in CI

--- a/alerts/charts/ci/test-values.yaml
+++ b/alerts/charts/ci/test-values.yaml
@@ -5,6 +5,8 @@ global:
     baseDomain: example.com
 
 alerts:
+  prometheusOperator:
+    enabled: true
   defaultRules:
     labels:
       plugin: test
