feat(logs): add config and tpls for elastic endpoint

--- a/audit-logs/charts/ci/test-values.yaml
+++ b/audit-logs/charts/ci/test-values.yaml
@@ -9,5 +9,18 @@ auditLogs:
     failover_password_b: passwordb
     endpoint: test-endpoint
     index: test
+  elastic:
+      enabled: true
+      endpoint: test
+      tls:
+        crt: testcrt
+        key: testkey
+      labels:
+        - action: insert
+          key: testkey
+          value: testvalue
+        - action: insert
+          key: testkey
+          value: testvalue
   cluster: test
   region: test
