--- a/audit-logs/charts/values.yaml
+++ b/audit-logs/charts/values.yaml
@@ -37,6 +37,18 @@ auditLogs:
     failover_username_b:
     # -- Second Password (as a failover) for OpenSearch endpoint
     failover_password_b:
+    elastic:
+      # -- Activates the configuration for Elastic.
+      enabled: true
+      # -- Endpoint URL for Elastic
+      endpoint:
+      # -- TLS certificate for Elastic
+      tls:
+        crt: 
+        key: 
+      # -- Labels to be added to Elastic logs
+      labels: []
+
 
   prometheus:
     # -- Activates the service-monitoring for the Logs Collector.
