feat(audit-logs): updates audit logs with auditd receiver (#1367)
* feat(audit-logs): updates audit logs with auditd receiver

---------

Signed-off-by: Simon Olander <simon.olander@sap.com>

* fix(audit-logs): fixes indentation by adding a flag for enabling auditd ingestion

---------

Signed-off-by: Simon Olander <simon.olander@sap.com>

* fix(audit-logs): changes the wrong volume target name

---------

Signed-off-by: Simon Olander <simon.olander@sap.com>

* fix(audit-logs): fixes mounting issues

---------

Signed-off-by: Simon Olander <simon.olander@sap.com>

* chore(audit-logs): removes auditd rules

---------

Signed-off-by: Simon Olander <simon.olander@sap.com>

---------

Signed-off-by: Simon Olander <simon.olander@sap.com>

--- a/audit-logs/charts/templates/audit-logs-collector.yaml
+++ b/audit-logs/charts/templates/audit-logs-collector.yaml
@@ -15,6 +15,16 @@ metadata:
   {{- end }}
 spec:
   mode: daemonset
+  hostPID: true
+  securityContext:
+    privileged: true
+    runAsUser: 0
+    capabilities:
+      add:
+        # Capabilities needed for auditd
+        - 'AUDIT_READ'
+        - 'AUDIT_WRITE'
+        - 'AUDIT_CONTROL'
   tolerations:
   - operator: Exists
   env:
@@ -45,15 +55,27 @@ spec:
     - name: prometheus
       port: 8888
 {{- end }}
+
+  initContainers:
+{{- if .Values.auditLogs.logsCollector.auditd.enabled }}
+  {{- include "auditd.initContainer" . | nindent 2 -}}
+{{ end }}
+
   image: {{ .Values.auditLogs.collectorImage.repository }}:{{ .Values.auditLogs.collectorImage.tag }}
   volumeMounts:
   - mountPath: /var/log
     name: varlog
     readOnly: true
+{{- if .Values.auditLogs.logsCollector.auditd.enabled }}
+  {{- include "auditd.volumeMounts" . | nindent 2 -}}
+{{ end }}
   volumes:
   - name: varlog
     hostPath:
       path: /var/log
+{{- if .Values.auditLogs.logsCollector.auditd.enabled }}
+  {{- include "auditd.volumes" . | nindent 2 -}}
+{{ end }}
   config:
     receivers:
       journald:
@@ -83,11 +105,19 @@ spec:
             field: attributes["log.type"]
             value: "containerd"
 
+{{- if .Values.auditLogs.logsCollector.auditd.enabled }}
+  {{- include "auditd.receiver" . | nindent 6 -}}
+{{ end }}
+
     processors:
       batch:
         send_batch_max_size: 500
         timeout: 5s
         send_batch_size : 10
+
+{{- if .Values.auditLogs.logsCollector.auditd.enabled }}
+  {{- include "auditd.processors" . | nindent 6 -}}
+{{ end }}
 
       attributes/cluster:
         actions:
@@ -334,6 +364,9 @@ spec:
 {{- if .Values.auditLogs.openSearchLogs.failover.enabled }}
     {{- include "failover.pipeline" . | nindent 8 -}}
 {{- end }}
+{{- if .Values.auditLogs.logsCollector.auditd.enabled }}
+  {{- include "auditd.pipelines" . | nindent 8 -}}
+{{ end }}
         logs/containerd:
           receivers: [filelog/containerd]
           processors: [k8sattributes,attributes/cluster,transform/ingress,batch]
