--- a/audit-logs/charts/templates/audit-logs-collector.yaml
+++ b/audit-logs/charts/templates/audit-logs-collector.yaml
@@ -66,6 +66,9 @@ spec:
   - mountPath: /var/log
     name: varlog
     readOnly: true
+{{- if .Values.auditLogs.elastic.enabled }}
+  {{- include "es.volumeMounts" . | nindent 2 }}
+{{- end }}
 {{- if .Values.auditLogs.logsCollector.auditd.enabled }}
   {{- include "auditd.volumeMounts" . | nindent 2 -}}
 {{ end }}
@@ -73,6 +76,9 @@ spec:
   - name: varlog
     hostPath:
       path: /var/log
+{{- if .Values.auditLogs.elastic.enabled }}
+  {{- include "es.volumes" . | nindent 2 }}
+{{- end }}
 {{- if .Values.auditLogs.logsCollector.auditd.enabled }}
   {{- include "auditd.volumes" . | nindent 2 -}}
 {{ end }}
@@ -114,6 +120,9 @@ spec:
         send_batch_max_size: 500
         timeout: 5s
         send_batch_size : 10
+{{- if .Values.auditLogs.elastic.enabled }}
+    {{- include "es.labels" . | nindent 6 -}}
+{{- end }}
 
 {{- if .Values.auditLogs.logsCollector.auditd.enabled }}
   {{- include "auditd.processors" . | nindent 6 -}}
@@ -307,6 +316,9 @@ spec:
 {{- if .Values.auditLogs.openSearchLogs.failover.enabled }}
   {{- include "failover.exporter" . | nindent 6 -}}
 {{- end }}
+{{- if .Values.auditLogs.elastic.enabled }}
+    {{- include "es.exporters" . | nindent 6 -}}
+{{- end }}
     extensions:
       basicauth/failover_a:
         client_auth:
@@ -363,6 +375,9 @@ spec:
           exporters: [opensearch/failover_a]
 {{- if .Values.auditLogs.openSearchLogs.failover.enabled }}
     {{- include "failover.pipeline" . | nindent 8 -}}
+{{- end }}
+{{- if .Values.auditLogs.elastic.enabled }}
+   {{- include "es.pipeline" . | nindent 8 -}}
 {{- end }}
 {{- if .Values.auditLogs.logsCollector.auditd.enabled }}
   {{- include "auditd.pipelines" . | nindent 8 -}}
