fix(audit-logs) add conditional rendering of tls secret

--- a/audit-logs/charts/templates/tls-secret.yaml
+++ b/audit-logs/charts/templates/tls-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.auditLogs.elastic.enabled }}
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -13,3 +14,4 @@ metadata:
 data:
   tls.crt: {{ .Values.auditLogs.elastic.tls.crt | b64enc | quote }}
   tls.key: {{ .Values.auditLogs.elastic.tls.key | b64enc | quote }}
+{{- end }}
