fix(kafka) add conditional rendering of secret

--- a/kafka/chart/templates/secret.yaml
+++ b/kafka/chart/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.gatewayLogs.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,3 +8,4 @@ metadata:
 data:
    failover_username_a: {{ .Values.gatewayLogs.openSearchLogs.failover_username_a | b64enc | quote }}
    failover_password_a: {{ .Values.gatewayLogs.openSearchLogs.failover_password_a | b64enc | quote }}
+{{- end }}
