feat(kube-monitoring): federation namespace lookup (#1370)
* federation namespace lookup

* ignore new values

* improve maintainability

* Update kube-monitoring/charts/templates/additionalScrapeConfigs.yaml

Co-authored-by: Tommy Sauer <tommy.sauer@sap.com>

* add configurability of scrapeconfig

---------

Co-authored-by: Tommy Sauer <tommy.sauer@sap.com>

--- a/kube-monitoring/charts/values.yaml
+++ b/kube-monitoring/charts/values.yaml
@@ -571,3 +571,13 @@ networkPolicies:
   #       ports:
   #       - protocol: TCP
   #         port: 9090
+
+# @ignored
+additionalScrapeConfigs:
+  namespaceLookup:
+    enabled: false
+    regex: "your-regex"
+    prometheusName: prometheus
+    prometheusPort: 80
+    metricRelabelConfigs: []
+    params: []
