disable crds by default

--- a/alerts/charts/ci/test-values.yaml
+++ b/alerts/charts/ci/test-values.yaml
@@ -7,6 +7,8 @@ global:
 alerts:
   prometheusOperator:
     enabled: true
+  crds:
+    enabled: true
   defaultRules:
     labels:
       plugin: test
