--- a/alerts/charts/values.yaml
+++ b/alerts/charts/values.yaml
@@ -95,7 +95,7 @@ alerts:
   ## Install Prometheus Operator CRDs
   ##
   crds:
-    enabled: true
+    enabled: false
 
   windowsMonitoring:
   ## Deploys the windows-exporter and Windows-specific dashboards and rules (job name must be 'windows-exporter')
